--- a/app/views/reports/provider_service_productivity_report/_table.html.haml
+++ b/app/views/reports/provider_service_productivity_report/_table.html.haml
@@ -27,18 +27,37 @@
     %tr
       %th{style: 'width: 200px;'}= translate_helper(:funding_source)
       %th= translate_helper(:number_of_trips)
+      %th= translate_helper(:total_passengers)
 
   %tbody
     - funding_sources = FundingSource.by_provider(current_provider).where(id: @trip_count_by_funding_source.keys)
     - if funding_sources.empty?
       %tr
-        %td{colspan:2}
+        %td{colspan:3}
           No funding source for trips.
     - else
       - funding_sources.each do |source|
         %tr
           %td= source.name
           %td= @trip_count_by_funding_source[source.id].to_i
+          %td
+            - passenger_counts_by_funding_source = []
+            - total_passenger_count = 0
+            - if @customer_count_by_funding_source[source.id] && @customer_count_by_funding_source[source.id] > 0
+              - total_passenger_count += @customer_count_by_funding_source[source.id]
+              - passenger_counts_by_funding_source << "#{@customer_count_by_funding_source[source.id]} Customer"
+            - if @guest_count_by_funding_source[source.id] && @guest_count_by_funding_source[source.id] > 0
+              - total_passenger_count += @guest_count_by_funding_source[source.id]
+              - passenger_counts_by_funding_source << "#{@guest_count_by_funding_source[source.id]} Guest"
+            - if @attendant_count_by_funding_source[source.id] && @attendant_count_by_funding_source[source.id] > 0
+              - total_passenger_count += @attendant_count_by_funding_source[source.id]
+              - passenger_counts_by_funding_source << "#{@attendant_count_by_funding_source[source.id]} Attendant"
+            - if @service_animal_count_by_funding_source[source.id] && @service_animal_count_by_funding_source[source.id] > 0
+              - total_passenger_count += @service_animal_count_by_funding_source[source.id]
+              - passenger_counts_by_funding_source << "#{@service_animal_count_by_funding_source[source.id]} Service Animal"
+            - if total_passenger_count > 0
+              = "#{total_passenger_count} total: #{passenger_counts_by_funding_source.join(', ')}"
+
 
 - if @run_dates
   - @run_dates.each do |date|
