Changed Vehicles tab's Location column to show garage address.(RPII-645)

--- a/app/views/vehicles/_vehicle.html.haml
+++ b/app/views/vehicles/_vehicle.html.haml
@@ -17,7 +17,7 @@
   %td
     = vehicle.vin
   %td
-    = vehicle.garaged_location
+    = vehicle.garage_address&.address_text
   %td
     = vehicle.active_status_text
   %td
